# protowire-rust

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  buf.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
crates/bench-pxf/: Cargo.toml
crates/bench-pxf/src/: main.rs
crates/bench-sbe/: Cargo.toml
crates/bench-sbe/src/: main.rs
crates/check-decode/: Cargo.toml
crates/check-decode/src/: main.rs
crates/dump-envelope/: Cargo.toml
crates/dump-envelope/src/: main.rs
crates/protowire/: Cargo.toml
crates/protowire-cli/: Cargo.toml
crates/protowire-cli/src/: lib.rs  main.rs
crates/protowire-cli/tests/: cli.rs
crates/protowire-envelope/: Cargo.toml
crates/protowire-envelope/src/: codec.rs  lib.rs
crates/protowire-pb/: Cargo.toml
crates/protowire-pb/src/: codec.rs  lib.rs  wire.rs
crates/protowire-pxf/: Cargo.toml
crates/protowire-pxf/benches/: decoder.rs
crates/protowire-pxf/src/: annotations.rs  ast.rs  dataset_reader.rs  decode.rs  encode.rs  errors.rs  format.rs  lexer.rs  lib.rs  parser.rs  result.rs  schema.rs  table_reader.rs  token.rs
crates/protowire-pxf/testdata/: any-test.proto  bench-test.binpb  bench-test.proto  d4-test.binpb  d4-test.proto  hardening-test.binpb  hardening-test.proto  schema-test.proto
crates/protowire-pxf/tests/: dataset_reader.rs  decode_d1.rs  decode_d2.rs  decode_d3.rs  decode_d4.rs  decode_hardening.rs  directive.rs  encode_e.rs  presence_directives.rs  proto_directive.rs  schema.rs  table_reader.rs
crates/protowire-sbe/: Cargo.toml
crates/protowire-sbe/src/: annotations.rs  codec.rs  errors.rs  lib.rs  marshal.rs  prototoxml.rs  saxlite.rs  template.rs  unmarshal.rs  view.rs  xmlschema.rs  xmltoproto.rs
crates/protowire-sbe/testdata/: sbe-test.binpb
crates/protowire-sbe/tests/: codec.rs  convert.rs  saxlite.rs  template.rs  view.rs
crates/protowire/src/: lib.rs
scripts/: gen-testdata.sh
