[workspace]
resolver = "2"
members = [
    "crates/protowire",
    "crates/protowire-pb",
    "crates/protowire-envelope",
    "crates/protowire-pxf",
    "crates/protowire-sbe",
    "crates/dump-envelope",
    "crates/bench-pxf",
    "crates/bench-sbe",
    "crates/check-decode",
]

[workspace.package]
version = "0.70.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
repository = "https://github.com/trendvidia/protowire-rust"
homepage = "https://protowire.org"
authors = ["TrendVidia, LLC <open-source@trendvidia.com>"]
keywords = ["protobuf", "pxf", "sbe", "wire-format", "fix"]
categories = ["encoding", "parser-implementations", "network-programming"]
readme = "README.md"

[workspace.dependencies]
protowire = { path = "crates/protowire", version = "0.70.0" }
protowire-pb = { path = "crates/protowire-pb", version = "0.70.0" }
protowire-envelope = { path = "crates/protowire-envelope", version = "0.70.0" }
protowire-pxf = { path = "crates/protowire-pxf", version = "0.70.0" }
protowire-sbe = { path = "crates/protowire-sbe", version = "0.70.0" }

prost = "0.14"
prost-build = "0.13"
prost-reflect = "0.16"
prost-types = "0.14"
bytes = "1.7"
thiserror = "1.0"
quick-xml = "0.39"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
