[package]
name = "bench-sbe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-port SBE microbench (Rust). Prints JSON to stdout for the cross_sbe_bench.sh runner."

[[bin]]
name = "bench-sbe"
path = "src/main.rs"

[dependencies]
protowire-sbe = { workspace = true }
prost-reflect = { workspace = true }
