[package]
name = "protowire-envelope"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "API response envelope — Rust port of github.com/trendvidia/protowire/envelope"

[dependencies]
protowire-pb = { workspace = true }
thiserror = { workspace = true }
