[package]
name = "protowire-pb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Schema-free protobuf wire codec — Rust port of github.com/trendvidia/protowire/encoding/pb"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
