[package]
name = "protowire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Protowire umbrella crate — re-exports envelope, pb, pxf, sbe."

[dependencies]
protowire-pb = { workspace = true }
protowire-envelope = { workspace = true }
protowire-pxf = { workspace = true }
protowire-sbe = { workspace = true }
